# pcat-workstation-v2

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/pcat-pipeline/: Cargo.toml
crates/pcat-pipeline/benches/: dicom_load_bench.rs
crates/pcat-pipeline/examples/: measure_rca.rs
crates/pcat-pipeline/src/: active_contour.rs  annotation.rs  centerline.rs  contour.rs  cpr.rs  curved_cpr.rs  dicom_decode.rs  dicom_errors.rs  dicom_load.rs  dicom_loader.rs  dicom_scan.rs  interp.rs  lib.rs  radial_angular.rs  roi.rs  stretched_cpr.rs  types.rs  vessel_wall.rs  voi.rs
crates/pcat-pipeline/src/mmd/: direct.rs  linalg.rs  materials.rs  mod.rs  pwsqs.rs
crates/pcat-pipeline/tests/: dicom_loader_integration.rs  fixture_smoke.rs
crates/pcat-pipeline/tests/common/: mod.rs
docs/: 2026-04-15-e2e-verification.md  mmd-theory.md  mmd_basis_materials_hu_plot.py  mmd_basis_materials_plot.py  pcat_detectability_plot.py
docs/specs/: 2026-03-25-pcat-v2-implementation-plan.md  2026-03-25-pcat-v2-pure-rust-plan.md  2026-03-25-pcat-v2-revised-design.md  2026-03-25-seed-editor-ux-design.md  2026-04-14-pvat-mmd-characterization.md  2026-04-20-fast-dicom-loading-design.md
pipeline_server/: dicom_routes.py  main.py  requirements.txt  volume_manager.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  volume_cache.rs
src-tauri/src/commands/: annotation.rs  cpr.rs  dicom.rs  framed.rs  mmd.rs  mod.rs  pipeline.rs  volume.rs
src-tauri/src/pipeline/: centerline.rs  contour.rs  cpr.rs  curved_cpr.rs  dicom_loader.rs  mmd.rs  mod.rs  spline.rs  stats.rs  voi.rs
src-tauri/tests/: bulk_load_command.rs  cpr_reference_test.rs  load_patient_57955439.rs  mmd_debug.rs  mmd_real_data.rs
src/components/: AnalysisDashboard.svelte  ContextPanel.svelte  CprView.svelte  CrossSection.svelte  CrossSectionStrip.svelte  HintLine.svelte  (+13 more)
test_output/: rca_curved_rot0.json  rca_curved_rot0.raw  rca_curved_rot180.json  rca_curved_rot180.raw  rca_curved_rot270.json  rca_curved_rot270.raw  rca_curved_rot90.json  rca_curved_rot90.raw  rca_straightened.json  rca_straightened.raw
(+14 files in other folders)
