[package]
name = "pcat-workstation-v2"
version = "0.1.0"
description = "PCAT Coronary Artery Analysis Workstation"
authors = ["Shu Nie"]
edition = "2021"

[lib]
name = "pcat_workstation_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pcat-workstation-v2"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
ndarray = { version = "0.16", features = ["serde"] }
nalgebra = "0.33"
dicom = "0.9"
dicom-pixeldata = { version = "0.9", features = ["ndarray"] }
bytemuck = { version = "1", features = ["derive"] }
walkdir = "2"
base64 = "0.22"
rayon = "1"

[profile.dev]
opt-level = 2
