[package]
name = "pcat-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
nalgebra = "0.33"
dicom = "0.9"
dicom-pixeldata = { version = "0.9", features = ["ndarray"] }
bytemuck = { version = "1", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
